@@ -1,20 +1,11 @@
 <configuration>
-
-       <windows>
-
-              <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-
-      <dependentAssembly>
-
-        <assemblyIdentity type="win32" name="Microsoft.VC80.CRT" processorArchitecture="x86" publicKeyToken="1fc8b3b9a1e18e3b"></assemblyIdentity>
-
-        <bindingRedirect oldVersion="8.0.41204.256-" newVersion="0.0.0.0"/>
-
-      </dependentAssembly>
-
-    </assemblyBinding>
-
-       </windows>
-
+<windows>
+<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+<dependentAssembly>
+<assemblyIdentity type="win32" name="Microsoft.VC80.CRT" processorArchitecture="x86" publicKeyToken="1fc8b3b9a1e18e3b"></assemblyIdentity>
+<bindingRedirect oldVersion="8.0.41204.256-" newVersion="0.0.0.0"/>
+</dependentAssembly>
+</assemblyBinding>
+</windows>
 </configuration>
 
