@@ -62,6 +62,7 @@ private:
 	LLColor4 mObjectChatColor;
 	LLColor4 mOwnerSayChatColor;
 	LLColor4 mBGChatColor;
+	LLColor4 mLuaChatColor;
 	LLColor4 mScriptErrorColor;
 	LLColor4 mHTMLLinkColor;
 	BOOL mChatFullWidth;
@@ -92,6 +93,7 @@ LLPrefsChatImpl::LLPrefsChatImpl()
 	getChild<LLColorSwatchCtrl>("system")->set(gSavedSettings.getColor4("SystemChatColor"));
 	getChild<LLColorSwatchCtrl>("user")->set(gSavedSettings.getColor4("UserChatColor"));
 	getChild<LLColorSwatchCtrl>("agent")->set(gSavedSettings.getColor4("AgentChatColor"));
+	getChild<LLColorSwatchCtrl>("lua")->set(gSavedSettings.getColor4("LuaChatColor"));
 	getChild<LLColorSwatchCtrl>("im")->set(gSavedSettings.getColor4("IMChatColor"));
 	getChild<LLColorSwatchCtrl>("script_error")->set(gSavedSettings.getColor4("ScriptErrorColor"));
 	getChild<LLColorSwatchCtrl>("objects")->set(gSavedSettings.getColor4("ObjectChatColor"));
@@ -122,6 +124,7 @@ void LLPrefsChatImpl::refreshValues()
 	mSystemChatColor = gSavedSettings.getColor4("SystemChatColor");
 	mUserChatColor = gSavedSettings.getColor4("UserChatColor");
 	mAgentChatColor = gSavedSettings.getColor4("AgentChatColor");
+	mLuaChatColor = gSavedSettings.getColor4("LuaChatColor");
 	mIMChatColor = gSavedSettings.getColor4("IMChatColor");
 	mObjectChatColor = gSavedSettings.getColor4("ObjectChatColor");
 	mOwnerSayChatColor = gSavedSettings.getColor4("llOwnerSayChatColor");
@@ -149,6 +152,7 @@ void LLPrefsChatImpl::cancel()
 	gSavedSettings.setColor4("SystemChatColor", mSystemChatColor);
 	gSavedSettings.setColor4("UserChatColor", mUserChatColor);
 	gSavedSettings.setColor4("AgentChatColor", mAgentChatColor);
+	gSavedSettings.setColor4("LuaChatColor", mLuaChatColor);
 	gSavedSettings.setColor4("IMChatColor", mIMChatColor);
 	gSavedSettings.setColor4("ObjectChatColor", mObjectChatColor);
 	gSavedSettings.setColor4("llOwnerSayChatColor", mOwnerSayChatColor);
@@ -177,6 +181,7 @@ void LLPrefsChatImpl::apply()
 	gSavedSettings.setColor4("SystemChatColor", childGetValue("system"));
 	gSavedSettings.setColor4("UserChatColor", childGetValue("user"));
 	gSavedSettings.setColor4("AgentChatColor", childGetValue("agent"));
+	gSavedSettings.setColor4("LuaChatColor", childGetValue("lua"));
 	gSavedSettings.setColor4("IMChatColor", childGetValue("im"));
 	gSavedSettings.setColor4("ScriptErrorColor", childGetValue("script_error"));
 	gSavedSettings.setColor4("ObjectChatColor", childGetValue("objects"));
